MC-42908 fix search placeholder and table text align

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -94,8 +94,9 @@ html, body {
       font-size: 14px;
     }
 
-    input::-webkit-input-placeholder { /* WebKit browsers */
-      padding-left: 10px;
+    input[type=text] {
+      padding-left: 33px;
+      //margin-right: 20px;
     }
 
     &:before {
@@ -172,7 +173,6 @@ html, body {
         border-bottom: 0;
         margin-top: 20px;
         right: 5%;
-        //margin-left: 155px;
       }
     }
   }
@@ -191,22 +191,22 @@ html, body {
 
     a {
       font-size: 14px;
-    }
-    a:after {
-      content: '';
-      position: absolute;
-      width: 6px;
-      height: 6px;
-      border: 2px solid;
-      border-color: $table-header-text;
-      -ms-transform: rotate(135deg);
-      -webkit-transform: rotate(135deg);
-      transform: rotate(135deg);
-      border-radius: 1px;
-      border-left: 0;
-      border-bottom: 0;
-      margin-top: 15px;
-      right: 5%;
+      &:after {
+        content: '';
+        position: absolute;
+        width: 6px;
+        height: 6px;
+        border: 2px solid;
+        border-color: $table-header-text;
+        -ms-transform: rotate(135deg);
+        -webkit-transform: rotate(135deg);
+        transform: rotate(135deg);
+        border-radius: 1px;
+        border-left: 0;
+        border-bottom: 0;
+        margin-top: 14px;
+        right: 5%;
+      }
     }
   }
 
@@ -287,6 +287,12 @@ html, body {
       font-size: 14px;
       line-height: 2.5;
       text-decoration: none;
+    }
+
+    .arrow-footer {
+      position: absolute;
+      right: 5%;
+      padding-top: 10px;
     }
   }
 }
@@ -513,7 +519,7 @@ html, body {
 
     th {
       padding: 5px 10px;
-      vertical-align: bottom;
+      vertical-align: top;
       background: $general-table-bg;
       color: $table-header-text;
     }
